# TSVersion/src/routes/students/tasks/{taskOrder}/_index.routes.ts
@@ -1,6 +1,6 @@
 import { Router } from "express";
 import passport from "passport";
-import { getIntro, start } from '../../../../controllers/students/task.controller';
+import { getIntro } from '../../../../controllers/students/task.controller';
 
 const auth = passport.authenticate('jwt', { session: false });
 
@@ -8,6 +8,5 @@ const router = Router({ mergeParams: true });
 router.use(auth);
 
 router.get('/introduction', getIntro);
-router.post('/start', start);
 
 export default router;
